# esewa-xls-to-csv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
esewa_xls_to_csv/: __main__.py  utils.py  xls.py
